--- a/lwc/bikeCard/bikeCard.html
+++ b/lwc/bikeCard/bikeCard.html
@@ -6,5 +6,6 @@
         <lightning-badge label={category}></lightning-badge>
         <div>Price: {price}</div>
         <div><img src={pictureUrl}/></div>
+        <div>Yash new changes</div>
     </div>
 </template>
