new changes hello world

--- a/lwc/helloWorld/helloWorld.html
+++ b/lwc/helloWorld/helloWorld.html
@@ -5,4 +5,5 @@
       <lightning-input label="Name" value={greeting} onchange={changeHandler}></lightning-input>
     </div>
   </lightning-card>
+  hi there
 </template>
