--- a/lwc/bikeCard/bikeCard.html
+++ b/lwc/bikeCard/bikeCard.html
@@ -2,6 +2,7 @@
     <div>
         <div>Name: {name}</div>
         <div>Description: {description}</div>
+        test
         <lightning-badge label={material}></lightning-badge>
         <lightning-badge label={category}></lightning-badge>
         <div>Price: {price}</div>
